# RAiiN

./: .gitattributes  .gitignore  LICENSE  README.md  meson.build
.cache/clangd/index/: Vertex.hpp.8585F01E8B515034.idx  _fixes.hpp.C0D8FB48BDB73F1B.idx  _vectorize.hpp.4426F9947FB033E3.idx  common.hpp.4B5003086CC151A1.idx  compute_common.hpp.1C9951723D84C78D.idx  compute_vector_decl.hpp.5B2C424C117631B8.idx  compute_vector_relational.hpp.3E8F9DA0855A6153.idx  create_commandbuffer.cpp.DCBA4DA1062A8D3A.idx  create_commandpoll.cpp.D64E73BE6567DC2C.idx  create_framebuffers.cpp.856177E3FEF02FF5.idx  create_sync_objects.cpp.E4367589A1195DCF.idx  create_vertex_buffer.cpp.AB1E09F87532B7F8.idx  createvkinstance.cpp.2BD452B2BC14C930.idx  createvkinstance.hpp.10D1F5661B2F41D2.idx  createvklogicaldevice.cpp.C5066433C4977423.idx  createvklogicaldevice.hpp.8CA7A859CF2C0ADD.idx  createvksurface.cpp.B721434A02EDEB02.idx  createvksurface.hpp.C20108C4599B9A40.idx  draw_frame.cpp.AD6C48311B8103C1.idx  exponential.hpp.16BB84DE54BAF9C4.idx  extensions.hpp.C1D66C472EF40988.idx  findqueuefamilyindices.cpp.9963BF8AE613B6A3.idx  findqueuefamilyindices.hpp.CB4D98D45F205F6D.idx  func_common.inl.DBFB344A0605C72A.idx  func_exponential.inl.5D62AF359B77CF30.idx  func_geometric.inl.8050817AD6F5D2B1.idx  func_integer.inl.3663D76F51545809.idx  func_matrix.inl.069E55658D34DEAB.idx  func_packing.inl.63902C6D49E5612A.idx  func_trigonometric.inl.836C5FD0A57C8798.idx  func_vector_relational.inl.78FC5FCF219D7989.idx  fwd.hpp.1552F6E95E14CC83.idx  geometric.hpp.1979C421965433A1.idx  glfw3.h.FCAD1B93EFFFA743.idx  glfw3native.h.F279B9F4E84E2F23.idx  glm.hpp.9023F0F6857DF9AF.idx  graphics_pipeline.cpp.21FDDE1F16BAA15D.idx  integer.hpp.5C5D0664B8BA4F36.idx  main2.cpp.9412DEEC42E52AB5.idx  mat2x2.hpp.7F3086370F5D297A.idx  (+143 more)
Engine/engine/render_engine/include/: Vertex.hpp  render_engine.hpp
Engine/engine/render_engine/shaders/glsl/: compile_shaders.bat  vertex_shader.glsl
Engine/engine/render_engine/shaders/slang/: compile_shaders.bat  fragment_shader.slang  vertex_shader.slang
Engine/engine/render_engine/src/: create_commandbuffer.cpp  create_commandpoll.cpp  create_framebuffers.cpp  create_sync_objects.cpp  create_vertex_buffer.cpp  draw_frame.cpp  graphics_pipeline.cpp  render_engine.cpp  render_pass.cpp  swapchain_recreation.cpp
Engine/engine/vulkanaid/include/: aHeaderOverview.txt  createvkinstance.hpp  createvklogicaldevice.hpp  createvksurface.hpp  extensions.hpp  findqueuefamilyindices.hpp  selectvkphysicaldevice.hpp  setupvkswapchain.hpp  setupvkvalidationlayer.hpp  vulkanaid.hpp
Engine/engine/vulkanaid/src/: createvkinstance.cpp  createvklogicaldevice.cpp  createvksurface.cpp  findqueuefamilyindices.cpp  selectvkphysicaldevice.cpp  setupvkswapchain.cpp  setupvkvalidationlayer.cpp  vulkanaid.cpp  vulkanaidraii.cpp
Engine/tools/: tools.hpp
SPIR-V/: frag.spv  vert.spv
src/: main.cpp  main2.cpp  mainTut.cpp
